NIFI-12139: Implemented migrateProperties, migrateRelationships for processors, as well as migrateProperties for ReportingTasks and Controller Services. Added system tests to verify behavior.
- Ensure that after restoring nars in the lib/ directory we restart NiFi so that they take effect. This is important if this test is not the last one to run

This closes #7837

Signed-off-by: David Handermann <exceptionfactory@apache.org>